@@ -143,6 +143,9 @@
    - markus@cvs.openbsd.org 2002/01/11 23:02:18
      [readpass.c]
      use _PATH_TTY
+   - markus@cvs.openbsd.org 2002/01/11 23:02:51
+     [auth2-chall.c]
+     use snprintf; mouring@
 
 
 20020121
@@ -7291,4 +7294,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1763 2002/01/22 12:24:51 djm Exp $
+$Id: ChangeLog,v 1.1764 2002/01/22 12:25:08 djm Exp $
